--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "express-http-proxy": "^1.5.1",
-    "express-redis-cache": "^1.1.3"
+    "express-redis-cache": "^1.1.3",
+    "node-redis": "^0.1.7"
   },
   "devDependencies": {
     "request": "^2.81.0",
