--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
   "name": "node-js-getting-started",
   "version": "0.3.0",
   "description": "A sample Node.js app using Express 4",
-  "engines": {
-    "node": "10.x"
-  },
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "test": "node test.js"
   },
   "dependencies": {
+    "dotenv": "^12.0.4",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "express-http-proxy": "^1.5.1",
