--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.15.2",
     "express-http-proxy": "^1.5.1",
     "express-redis-cache": "^1.1.3",
+    "node-fetch": "^2.6.1",
     "node-redis": "^0.1.7"
   },
   "devDependencies": {
